fixed reading speed issue